[package]
authors = ["Inflation <hypernovagama@gmail.com>"]
edition = "2018"
name = "raytracer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimallocator = "0.1.3"
rand = "0.7.3"
rayon = "1.4.0"

[dependencies.indicatif]
features = ["rayon"]
version = "0.15.0"

[profile.release]
debug = true
