[package]
authors = ["Inflation <hypernovagama@gmail.com>"]
edition = "2018"
name = "raytracer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
itertools = "0.10.0"
mimallocator = "0.1.3"
rayon = "1.5.0"

[dependencies.indicatif]
features = ["rayon"]
version = "0.15.0"

[dependencies.rand]
features = ["small_rng"]
version = "0.8.2"

[profile.release]
debug = true
